--- a/all-online.ini
+++ b/all-online.ini
@@ -69,15 +69,15 @@ custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🔰 节点选择`[]✈ 手动选择`[]✈ 延迟最低`[]✈ 故障切换`[]DIRECT
 custom_proxy_group=✈ 延迟最低`url-test`.*`http://www.gstatic.com/generate_204`500
 custom_proxy_group=✈ 故障切换`fallback`.*`http://www.gstatic.com/generate_204`500
-custom_proxy_group=🌏 亚洲及大洋洲`url-test`(台|新|日|韩|马来|印度|澳大利亚｜新西兰)`http://www.gstatic.com/generate_204`500
-custom_proxy_group=🌍 欧洲及中东地区`url-test`(英|法|德|阿姆斯特丹|荷兰|土耳其|比利时|瑞士)`http://www.gstatic.com/generate_204`500
+custom_proxy_group=🌏 亚洲及大洋洲`url-test`(台|新|日|韩|马来|印度|澳大利亚|新西兰|柬埔寨|巴基斯坦)`http://www.gstatic.com/generate_204`500
+custom_proxy_group=🌍 欧洲及中东地区`url-test`(英|法|德|阿姆斯特丹|荷兰|土耳其|比利时|瑞士|荷兰)`http://www.gstatic.com/generate_204`500
 custom_proxy_group=🇺🇸🇨🇦 北美通用`url-test`(美|加拿)`http://www.gstatic.com/generate_204`500
 custom_proxy_group=🇹🇼🇸🇬 中文地区`url-test`(台|新)`http://www.gstatic.com/generate_204`500
 custom_proxy_group=🇹🇼 台湾地区`url-test`(台)`http://www.gstatic.com/generate_204`500
 custom_proxy_group=🇯🇵 日本国`url-test`(日)`http://www.gstatic.com/generate_204`500
 custom_proxy_group=🇸🇬 新加坡`url-test`(新加坡|R新|s新)`http://www.gstatic.com/generate_204`500
 custom_proxy_group=流媒体`url-test`(R台|s台|R新|s新|流|流媒体)`http://www.gstatic.com/generate_204`500
-custom_proxy_group=🪙超低倍率0.2`url-test`(0.2)`http://www.gstatic.com/generate_204`500
+custom_proxy_group=🪙超低倍率`url-test`(0.2|0.3)`http://www.gstatic.com/generate_204`500
 
 ;设置分组标志位
 enable_rule_generator=true
@@ -183,7 +183,7 @@ emoji=(Bengal|孟加拉),🇧🇩
 emoji=(?i:\\bC[H]?N\\b|China|back|回国|中国[^-]|江苏[^-]|北京[^-]|上海[^-]|广州[^-]|深圳[^-]|杭州[^-]|常州[^-]|徐州[^-]|青岛[^-]|宁波[^-]|镇江[^-]|成都[^-]|河北[^-]|山西[^-]|辽宁[^-]|吉林[^-]|黑龙江[^-]|江苏[^-]|浙江[^-]|安徽[^-]|福建[^-]|江西[^-]|山东[^-]|河南[^-]|湖北[^-]|湖南[^-]|广东[^-]|海南[^-]|四川[^-]|贵州[^-]|云南[^-]|陕西[^-]|甘肃[^-]|青海[^-]|内蒙古[^-]|广西[^-]|西藏[^-]|宁夏[^-]|新疆[^-]),🇨🇳
 
 
-exclude_remarks=(到期|官方|Traffic|Expire|剩余|时间|官网|产品|香港|俄罗斯)
+exclude_remarks=(到期|官方|Traffic|Expire|剩余|时间|官网|产品|香港|俄罗斯|[^-]倍率6|[^-]倍率5)
 
 enable_rule_generator=true
 overwrite_original_rules=true
