--- a/all-online.ini
+++ b/all-online.ini
@@ -47,30 +47,31 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🔰 节点选择`select`[]✈ 延迟最低`[]✈ 故障切换`[]✈ 手动选择`[]流媒体`[]🌏 亚洲及大洋洲`[]🌍 欧洲及中东地区`[]🇺🇸🇨🇦 北美通用`[]🇹🇼🇸🇬 中文地区`[]🇹🇼 台湾地区`[]🇯🇵 日本国`[]🪙超低倍率0.2`[]DIRECT
+custom_proxy_group=🔰 节点选择`select`[]✈ 延迟最低`[]✈ 故障切换`[]✈ 手动选择`[]流媒体`[]🌏 东亚、东南亚`[]🌏 中东`[]🌍 欧洲`[]🇺🇸🇨🇦 北美通用`[]🇹🇼🇸🇬 中文地区`[]🇹🇼 台湾地区`[]🇯🇵 日本国`[]🪙超低倍率`[]DIRECT
 custom_proxy_group=✈ 手动选择`select`.*
-custom_proxy_group=Disney+`select`[]🔰 节点选择`[]🇹🇼 台湾地区`[]🇸🇬 新加坡`[]🇹🇼🇸🇬 中文地区`[]流媒体`[]✈ 延迟最低`[]✈ 故障切换`[]✈ 手动选择`[]🌏 亚洲及大洋洲`[]🌍 欧洲及中东地区`[]🇺🇸🇨🇦 北美通用`[]🇯🇵 日本国`[]🪙超低倍率0.2`[]DIRECT
-custom_proxy_group=Google`select`[]🔰 节点选择`[]✈ 延迟最低`[]✈ 故障切换`[]✈ 手动选择`[]🌏 亚洲及大洋洲`[]🌍 欧洲及中东地区`[]🇺🇸🇨🇦 北美通用`[]🇹🇼🇸🇬 中文地区`[]🇹🇼 台湾地区`[]🇯🇵 日本国`[]🪙超低倍率0.2`[]DIRECT
-custom_proxy_group=📺 Youtube`select`[]🔰 节点选择`[]✈ 延迟最低`[]✈ 故障切换`[]✈ 手动选择`[]🌏 亚洲及大洋洲`[]🌍 欧洲及中东地区`[]🇺🇸🇨🇦 北美通用`[]🇹🇼🇸🇬 中文地区`[]🇹🇼 台湾地区`[]🇯🇵 日本国`[]🪙超低倍率0.2`[]DIRECT
-custom_proxy_group=⚙️ 开发者`select`[]🔰 节点选择`[]✈ 延迟最低`[]✈ 故障切换`[]✈ 手动选择`[]🌏 亚洲及大洋洲`[]🌍 欧洲及中东地区`[]🇺🇸🇨🇦 北美通用`[]🇹🇼🇸🇬 中文地区`[]🇹🇼 台湾地区`[]🇯🇵 日本国`[]🪙超低倍率0.2`[]DIRECT
-custom_proxy_group=🕹︎ Nintendo`select`[]🔰 节点选择`[]✈ 延迟最低`[]✈ 故障切换`[]✈ 手动选择`[]🌏 亚洲及大洋洲`[]🌍 欧洲及中东地区`[]🇺🇸🇨🇦 北美通用`[]🇹🇼🇸🇬 中文地区`[]🇹🇼 台湾地区`[]🇯🇵 日本国`[]🪙超低倍率0.2`[]DIRECT
-custom_proxy_group=🖥️ PC游戏平台`select`[]🔰 节点选择`[]✈ 延迟最低`[]✈ 故障切换`[]✈ 手动选择`[]🌏 亚洲及大洋洲`[]🌍 欧洲及中东地区`[]🇺🇸🇨🇦 北美通用`[]🇹🇼🇸🇬 中文地区`[]🇹🇼 台湾地区`[]🇯🇵 日本国`[]🪙超低倍率0.2`[]DIRECT
-custom_proxy_group=🎮 Xbox`select`[]🔰 节点选择`[]✈ 延迟最低`[]✈ 故障切换`[]✈ 手动选择`[]🌏 亚洲及大洋洲`[]🌍 欧洲及中东地区`[]🇺🇸🇨🇦 北美通用`[]🇹🇼🇸🇬 中文地区`[]🇹🇼 台湾地区`[]🇯🇵 日本国`[]🪙超低倍率0.2`[]DIRECT
-custom_proxy_group=🤖 AI相关`select`[]🔰 节点选择`[]🇹🇼 台湾地区`[]🇸🇬 新加坡`[]🇹🇼🇸🇬 中文地区`[]流媒体`[]✈ 延迟最低`[]✈ 故障切换`[]✈ 手动选择`[]🌏 亚洲及大洋洲`[]🌍 欧洲及中东地区`[]🇺🇸🇨🇦 北美通用`[]🇯🇵 日本国`[]🪙超低倍率0.2`[]DIRECT
-custom_proxy_group=🖼️ Pixiv`select`[]🔰 节点选择`[]✈ 延迟最低`[]✈ 故障切换`[]✈ 手动选择`[]🌏 亚洲及大洋洲`[]🌍 欧洲及中东地区`[]🇺🇸🇨🇦 北美通用`[]🇹🇼🇸🇬 中文地区`[]🇹🇼 台湾地区`[]🇯🇵 日本国`[]🪙超低倍率0.2`[]DIRECT
-custom_proxy_group=✈️ Telegram`select`[]🔰 节点选择`[]✈ 延迟最低`[]✈ 故障切换`[]✈ 手动选择`[]🌏 亚洲及大洋洲`[]🌍 欧洲及中东地区`[]🇺🇸🇨🇦 北美通用`[]🇹🇼🇸🇬 中文地区`[]🇹🇼 台湾地区`[]🇯🇵 日本国`[]🪙超低倍率0.2`[]DIRECT
+custom_proxy_group=🍎 苹果服务`select`[]🔰 节点选择`[]✈ 延迟最低`[]✈ 故障切换`[]✈ 手动选择`[]🌏 东亚、东南亚`[]🌏 中东`[]🌍 欧洲`[]🇺🇸🇨🇦 北美通用`[]🇹🇼🇸🇬 中文地区`[]🇹🇼 台湾地区`[]🇯🇵 日本国`[]🪙超低倍率`[]DIRECT
+custom_proxy_group=🪟 巨硬服务`select`[]🔰 节点选择`[]✈ 延迟最低`[]✈ 故障切换`[]✈ 手动选择`[]🌏 东亚、东南亚`[]🌏 中东`[]🌍 欧洲`[]🇺🇸🇨🇦 北美通用`[]🇹🇼🇸🇬 中文地区`[]🇹🇼 台湾地区`[]🇯🇵 日本国`[]🪙超低倍率`[]DIRECT
+custom_proxy_group=Google`select`[]🔰 节点选择`[]✈ 延迟最低`[]✈ 故障切换`[]✈ 手动选择`[]🌏 东亚、东南亚`[]🌏 中东`[]🌍 欧洲`[]🇺🇸🇨🇦 北美通用`[]🇹🇼🇸🇬 中文地区`[]🇹🇼 台湾地区`[]🇯🇵 日本国`[]🪙超低倍率`[]DIRECT
+custom_proxy_group=📺 Youtube`select`[]🔰 节点选择`[]✈ 延迟最低`[]✈ 故障切换`[]✈ 手动选择`[]🌏 东亚、东南亚`[]🌏 中东`[]🌍 欧洲`[]🇺🇸🇨🇦 北美通用`[]🇹🇼🇸🇬 中文地区`[]🇹🇼 台湾地区`[]🇯🇵 日本国`[]🪙超低倍率`[]DIRECT
+custom_proxy_group=⚙️ 开发者`select`[]🔰 节点选择`[]✈ 延迟最低`[]✈ 故障切换`[]✈ 手动选择`[]🌏 东亚、东南亚`[]🌏 中东`[]🌍 欧洲`[]🇺🇸🇨🇦 北美通用`[]🇹🇼🇸🇬 中文地区`[]🇹🇼 台湾地区`[]🇯🇵 日本国`[]🪙超低倍率`[]DIRECT
+custom_proxy_group=🕹︎ Nintendo`select`[]🔰 节点选择`[]✈ 延迟最低`[]✈ 故障切换`[]✈ 手动选择`[]🌏 东亚、东南亚`[]🌏 中东`[]🌍 欧洲`[]🇺🇸🇨🇦 北美通用`[]🇹🇼🇸🇬 中文地区`[]🇹🇼 台湾地区`[]🇯🇵 日本国`[]🪙超低倍率`[]DIRECT
+custom_proxy_group=🖥️ PC游戏平台`select`[]🔰 节点选择`[]✈ 延迟最低`[]✈ 故障切换`[]✈ 手动选择`[]🌏 东亚、东南亚`[]🌏 中东`[]🌍 欧洲`[]🇺🇸🇨🇦 北美通用`[]🇹🇼🇸🇬 中文地区`[]🇹🇼 台湾地区`[]🇯🇵 日本国`[]🪙超低倍率`[]DIRECT
+custom_proxy_group=🎮 Xbox`select`[]🔰 节点选择`[]✈ 延迟最低`[]✈ 故障切换`[]✈ 手动选择`[]🌏 东亚、东南亚`[]🌏 中东`[]🌍 欧洲`[]🇺🇸🇨🇦 北美通用`[]🇹🇼🇸🇬 中文地区`[]🇹🇼 台湾地区`[]🇯🇵 日本国`[]🪙超低倍率`[]DIRECT
+custom_proxy_group=🤖 AI相关`select`[]🔰 节点选择`[]🇹🇼 台湾地区`[]🇸🇬 新加坡`[]🇹🇼🇸🇬 中文地区`[]流媒体`[]✈ 延迟最低`[]✈ 故障切换`[]✈ 手动选择`[]🌏 东亚、东南亚`[]🌏 中东`[]🌍 欧洲`[]🇺🇸🇨🇦 北美通用`[]🇯🇵 日本国`[]🪙超低倍率`[]DIRECT
+custom_proxy_group=🖼️ Pixiv`select`[]🔰 节点选择`[]✈ 延迟最低`[]✈ 故障切换`[]✈ 手动选择`[]🌏 东亚、东南亚`[]🌏 中东`[]🌍 欧洲`[]🇺🇸🇨🇦 北美通用`[]🇹🇼🇸🇬 中文地区`[]🇹🇼 台湾地区`[]🇯🇵 日本国`[]🪙超低倍率`[]DIRECT
+custom_proxy_group=✈️ Telegram`select`[]🔰 节点选择`[]✈ 延迟最低`[]✈ 故障切换`[]✈ 手动选择`[]🌏 东亚、东南亚`[]🌏 中东`[]🌍 欧洲`[]🇺🇸🇨🇦 北美通用`[]🇹🇼🇸🇬 中文地区`[]🇹🇼 台湾地区`[]🇯🇵 日本国`[]🪙超低倍率`[]DIRECT
 custom_proxy_group=📺 巴哈姆特`select`[]🇹🇼 台湾地区`[]🔰 节点选择`[]✈ 手动选择`[]✈ 延迟最低`[]✈ 故障切换`(台)
-custom_proxy_group=🍎 苹果服务`select`[]🔰 节点选择`[]✈ 延迟最低`[]✈ 故障切换`[]✈ 手动选择`[]🌏 亚洲及大洋洲`[]🌍 欧洲及中东地区`[]🇺🇸🇨🇦 北美通用`[]🇹🇼🇸🇬 中文地区`[]🇹🇼 台湾地区`[]🇯🇵 日本国`[]🪙超低倍率0.2`[]DIRECT
-custom_proxy_group=🪟 巨硬服务`select`[]🔰 节点选择`[]✈ 延迟最低`[]✈ 故障切换`[]✈ 手动选择`[]🌏 亚洲及大洋洲`[]🌍 欧洲及中东地区`[]🇺🇸🇨🇦 北美通用`[]🇹🇼🇸🇬 中文地区`[]🇹🇼 台湾地区`[]🇯🇵 日本国`[]🪙超低倍率0.2`[]DIRECT
-custom_proxy_group=🔞 R18`select`[]🔰 节点选择`[]✈ 延迟最低`[]✈ 故障切换`[]✈ 手动选择`[]🌏 亚洲及大洋洲`[]🌍 欧洲及中东地区`[]🇺🇸🇨🇦 北美通用`[]🇹🇼🇸🇬 中文地区`[]🇹🇼 台湾地区`[]🇯🇵 日本国`[]🪙超低倍率0.2`[]DIRECT
-custom_proxy_group=Netflix`select`[]🔰 节点选择`[]🇹🇼🇸🇬 中文地区`[]流媒体`[]✈ 延迟最低`[]✈ 故障切换`[]✈ 手动选择`[]🌏 亚洲及大洋洲`[]🌍 欧洲及中东地区`[]🇺🇸🇨🇦 北美通用`[]🇹🇼 台湾地区`[]🇸🇬 新加坡`[]🇯🇵 日本国`[]🪙超低倍率0.2`[]DIRECT
+custom_proxy_group=🔞 R18`select`[]🔰 节点选择`[]✈ 延迟最低`[]✈ 故障切换`[]✈ 手动选择`[]🌏 东亚、东南亚`[]🌏 中东`[]🌍 欧洲`[]🇺🇸🇨🇦 北美通用`[]🇹🇼🇸🇬 中文地区`[]🇹🇼 台湾地区`[]🇯🇵 日本国`[]🪙超低倍率`[]DIRECT
+custom_proxy_group=Disney+`select`[]🔰 节点选择`[]🇹🇼 台湾地区`[]🇸🇬 新加坡`[]🇹🇼🇸🇬 中文地区`[]流媒体`[]✈ 延迟最低`[]✈ 故障切换`[]✈ 手动选择`[]🌏 东亚、东南亚`[]🌏 中东`[]🌍 欧洲`[]🇺🇸🇨🇦 北美通用`[]🇯🇵 日本国`[]🪙超低倍率`[]DIRECT
+custom_proxy_group=Netflix`select`[]🔰 节点选择`[]🇹🇼🇸🇬 中文地区`[]流媒体`[]✈ 延迟最低`[]✈ 故障切换`[]✈ 手动选择`[]🌏 东亚、东南亚`[]🌏 中东`[]🌍 欧洲`[]🇺🇸🇨🇦 北美通用`[]🇹🇼 台湾地区`[]🇸🇬 新加坡`[]🇯🇵 日本国`[]🪙超低倍率`[]DIRECT
 custom_proxy_group=🌏 全球直连`select`[]DIRECT`[]🔰 节点选择`[]✈ 手动选择`[]✈ 延迟最低`[]✈ 故障切换
 custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🔰 节点选择`[]✈ 手动选择`[]✈ 延迟最低`[]✈ 故障切换`[]DIRECT
 custom_proxy_group=✈ 延迟最低`url-test`.*`http://www.gstatic.com/generate_204`500
 custom_proxy_group=✈ 故障切换`fallback`.*`http://www.gstatic.com/generate_204`500
-custom_proxy_group=🌏 亚洲及大洋洲`url-test`(台|新|日|韩|马来|印度|澳大利亚|新西兰|柬埔寨|巴基斯坦)`http://www.gstatic.com/generate_204`500
-custom_proxy_group=🌍 欧洲及中东地区`url-test`(英|法|德|阿姆斯特丹|荷兰|土耳其|比利时|瑞士|荷兰)`http://www.gstatic.com/generate_204`500
+custom_proxy_group=🌏 东亚、东南亚`url-test`(台|新|日|韩|马来|印度|澳大利亚|新西兰|柬埔寨|巴基斯坦)`http://www.gstatic.com/generate_204`500
+custom_proxy_group=🌏 中东`url-test`(土耳其)`http://www.gstatic.com/generate_204`500
+custom_proxy_group=🌍 欧洲`url-test`(英|法|德|阿姆斯特丹|荷兰|比利时|瑞士|荷兰)`http://www.gstatic.com/generate_204`500
 custom_proxy_group=🇺🇸🇨🇦 北美通用`url-test`(美|加拿)`http://www.gstatic.com/generate_204`500
 custom_proxy_group=🇹🇼🇸🇬 中文地区`url-test`(台|新)`http://www.gstatic.com/generate_204`500
 custom_proxy_group=🇹🇼 台湾地区`url-test`(台)`http://www.gstatic.com/generate_204`500
