--- a/all-online.ini
+++ b/all-online.ini
@@ -43,6 +43,7 @@ ruleset=REJECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ba
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
 ruleset=DIRECT,https://raw.githubusercontent.com/xianyu-one/subconverter_configs/main/rule-list/6.list
+ruleset=DIRECT,https://raw.githubusercontent.com/xianyu-one/subconverter_configs/main/rule-list/remote.list
 ruleset=DIRECT,[]GEOIP,CN,no-resolve
 ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
