--- a/all-online.ini
+++ b/all-online.ini
@@ -45,6 +45,7 @@ ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ch
 ruleset=DIRECT,https://raw.githubusercontent.com/xianyu-one/subconverter_configs/main/rule-list/6.list
 ruleset=DIRECT,https://raw.githubusercontent.com/xianyu-one/subconverter_configs/main/rule-list/remote.list
 ruleset=DIRECT,https://raw.githubusercontent.com/xianyu-one/subconverter_configs/main/rule-list/cn-cloud.list
+ruleset=DIRECT,https://raw.githubusercontent.com/xianyu-one/subconverter_configs/main/rule-list/cn-dbsoft.list
 ruleset=DIRECT,[]GEOIP,CN,no-resolve
 ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
