更新plex相关规则

--- a/all-online.ini
+++ b/all-online.ini
@@ -46,6 +46,7 @@ ruleset=DIRECT,https://raw.githubusercontent.com/xianyu-one/subconverter_configs
 ruleset=DIRECT,https://raw.githubusercontent.com/xianyu-one/subconverter_configs/main/rule-list/remote.list
 ruleset=DIRECT,https://raw.githubusercontent.com/xianyu-one/subconverter_configs/main/rule-list/cn-cloud.list
 ruleset=DIRECT,https://raw.githubusercontent.com/xianyu-one/subconverter_configs/main/rule-list/cn-dbsoft.list
+ruleset=DIRECT,https://raw.githubusercontent.com/xianyu-one/subconverter_configs/main/rule-list/plex-noproxy.list
 ruleset=DIRECT,[]GEOIP,CN,no-resolve
 ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
