更新规则集

--- a/all-online.ini
+++ b/all-online.ini
@@ -2,8 +2,6 @@
 ;不要随意改变关键字，否则会导致出错
 
 ;设置规则标志位
-ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
-ruleset=DIRECT,https://raw.githubusercontent.com/xianyu-one/subconverter_configs/main/rule-list/UnBan.list
 ruleset=🛑 全球拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ruleset=Google,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Google.list
 ruleset=Google,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
@@ -32,23 +30,35 @@ ruleset=🖥️ PC游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR
 ruleset=🖥️ PC游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Steam.list
 ruleset=🖥️ PC游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Blizzard.list
 ruleset=🤖 AI相关,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list
+ruleset=🤖 AI相关,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Claude.list
+ruleset=🤖 AI相关,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/ClaudeAI.list
+ruleset=🤖 AI相关,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Gemini.list
+ruleset=🛒 Amazon,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Amazon.list
+ruleset=🛒 Amazon,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/AmazonIP.list
+ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIpV6.list
+ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/CN.list
+ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/ChinaDNS.list
+ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/ChinaNet.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
-ruleset=REJECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
-ruleset=REJECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
+ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bilibili.list
 ruleset=DIRECT,https://raw.githubusercontent.com/xianyu-one/subconverter_configs/main/rule-list/6.list
 ruleset=DIRECT,https://raw.githubusercontent.com/xianyu-one/subconverter_configs/main/rule-list/remote.list
 ruleset=DIRECT,https://raw.githubusercontent.com/xianyu-one/subconverter_configs/main/rule-list/cn-cloud.list
 ruleset=DIRECT,https://raw.githubusercontent.com/xianyu-one/subconverter_configs/main/rule-list/cn-dbsoft.list
 ruleset=DIRECT,https://raw.githubusercontent.com/xianyu-one/subconverter_configs/main/rule-list/plex-noproxy.list
 ruleset=DIRECT,https://raw.githubusercontent.com/xianyu-one/subconverter_configs/main/rule-list/xianyudomain.list
+ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
+ruleset=DIRECT,https://raw.githubusercontent.com/xianyu-one/subconverter_configs/main/rule-list/UnBan.list
 ruleset=DIRECT,[]GEOIP,CN,no-resolve
+ruleset=REJECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
+ruleset=REJECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
@@ -66,6 +76,7 @@ custom_proxy_group=🎮 Xbox`select`[]🔰 节点选择`[]✈ 延迟最低`[]✈
 custom_proxy_group=🤖 AI相关`select`[]🔰 节点选择`[]🇹🇼 台湾地区`[]🇸🇬 新加坡`[]🇹🇼🇸🇬 中文地区`[]流媒体`[]✈ 延迟最低`[]✈ 故障切换`[]✈ 手动选择`[]🌏 东亚、东南亚`[]🌏 中东`[]🌍 欧洲`[]🇺🇸🇨🇦 北美通用`[]🇯🇵 日本国`[]🪙超低倍率`[]DIRECT
 custom_proxy_group=🖼️ Pixiv`select`[]🔰 节点选择`[]✈ 延迟最低`[]✈ 故障切换`[]✈ 手动选择`[]🌏 东亚、东南亚`[]🌏 中东`[]🌍 欧洲`[]🇺🇸🇨🇦 北美通用`[]🇹🇼🇸🇬 中文地区`[]🇹🇼 台湾地区`[]🇯🇵 日本国`[]🪙超低倍率`[]DIRECT
 custom_proxy_group=✈️ Telegram`select`[]🔰 节点选择`[]✈ 延迟最低`[]✈ 故障切换`[]✈ 手动选择`[]🌏 东亚、东南亚`[]🌏 中东`[]🌍 欧洲`[]🇺🇸🇨🇦 北美通用`[]🇹🇼🇸🇬 中文地区`[]🇹🇼 台湾地区`[]🇯🇵 日本国`[]🪙超低倍率`[]DIRECT
+custom_proxy_group=🛒 Amazon`select`[]🔰 节点选择`[]✈ 延迟最低`[]✈ 故障切换`[]✈ 手动选择`[]🌏 东亚、东南亚`[]🌏 中东`[]🌍 欧洲`[]🇺🇸🇨🇦 北美通用`[]🇹🇼🇸🇬 中文地区`[]🇹🇼 台湾地区`[]🇯🇵 日本国`[]🪙超低倍率`[]DIRECT
 custom_proxy_group=📺 巴哈姆特`select`[]🇹🇼 台湾地区`[]🔰 节点选择`[]✈ 手动选择`[]✈ 延迟最低`[]✈ 故障切换`(台)
 custom_proxy_group=🔞 R18`select`[]🔰 节点选择`[]✈ 延迟最低`[]✈ 故障切换`[]✈ 手动选择`[]🌏 东亚、东南亚`[]🌏 中东`[]🌍 欧洲`[]🇺🇸🇨🇦 北美通用`[]🇹🇼🇸🇬 中文地区`[]🇹🇼 台湾地区`[]🇯🇵 日本国`[]🪙超低倍率`[]DIRECT
 custom_proxy_group=Disney+`select`[]🔰 节点选择`[]🇹🇼 台湾地区`[]🇸🇬 新加坡`[]🇹🇼🇸🇬 中文地区`[]流媒体`[]✈ 延迟最低`[]✈ 故障切换`[]✈ 手动选择`[]🌏 东亚、东南亚`[]🌏 中东`[]🌍 欧洲`[]🇺🇸🇨🇦 北美通用`[]🇯🇵 日本国`[]🪙超低倍率`[]DIRECT
